# NAO

./: .gitignore  README.md
doc/: README.md
doc/paper/: .gitignore  Makefile  bibtex.bib  main.tex
doc/paper/scripts/graphic/: Makefile
doc/paper/src/: abbreviations.tex  abstract.tex  affirmation.tex  appendix.tex  introduction.tex  paper.tex  settings.tex  slogan.tex  title.tex
doc/paper/src/content/: algorithm.tex  architecture.tex  building.tex  choreographe.tex  hardware.tex  installation.tex  opencv.tex  project.tex  robot.tex  working_packages.tex
doc/treffen/: .gitignore  Makefile  README.md
doc/treffen/1/: 1.tex  Makefile
doc/treffen/2/: 2.tex  Makefile
doc/treffen/3/: 3.tex  Makefile
doc/treffen/4/: 4.tex  Makefile
doc/treffen/5/: Makefile
doc/treffen/vorlage/: Makefile  vorlage.tex
sources/: .gitignore  CMakeLists.txt
sources/src/: CMakeLists.txt  algo_vis.cpp  main.cpp  qiproject.xml
sources/src/algo/: Algorithm.cpp  Algorithm.hpp  Card.cpp  Card.hpp  Draw.cpp  Draw.hpp  State.hpp
sources/src/behaviour/: Cube.hpp  behaviour.hpp
sources/src/interaction/: Behavior.cpp  Behavior.hpp  ImageLoader.cpp  ImageLoader.h  ImageLoader.hpp  Navigation.cpp  Navigation.hpp  ShapeDetection.hpp
sources/src/opencv/: CircleDetection.h  FarbPos.hpp  Objekte.cpp  Objekte.hpp  ShapeDetection.hpp  ShapeDetection2.hpp  colorDetection.cpp  colorDetection.hpp  module.cpp  module.hpp
sources/src/opencv/opencv/: .gitignore  FarbPos.hpp  Objekte.cpp  Objekte.h  colorDetection.cpp  main.cpp  module.cpp  module.hpp  util.hpp
(+31 files in other folders)
